--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    .game-container { width: 100%; height: 100%; display: flex; flex-direction: column; opacity: 0; transition: opacity 0.5s; }
    .game-container.loaded { opacity: 1; }
    .header { text-align: center; padding: 1rem; }
-   #map-wrapper { position: relative; flex: 1; cursor: pointer; /* Dodaj kursor, by pokazać, że mapa jest klikalna */ }
+   #map-wrapper { position: relative; flex: 1; cursor: pointer; }
    #map-image { width: 100%; height: auto; display: block; }
    .marker { position: absolute; width: 30px; height: 30px; border-radius: 50%; display: flex; align-items: center; justify-content: center; color: #fff; font-weight: bold; transform: translate(-50%, -50%); }
    .marker.correct { background-color: rgba(22,163,74,0.9); border: 2px solid #fff; }
@@ -75,12 +75,10 @@
           img.addEventListener('click', e => {
             if (resetBtn.classList.contains('hidden') === false) return;
             
-            // ### POCZĄTEK ZMIANY: UPROSZCZENIE OBLICZEŃ ###
-            // Używamy `e.offsetX` i `e.offsetY`. Są to właściwości zdarzenia,
-            // które bezpośrednio podają pozycję kliknięcia względem elementu (obrazka).
-            // To jest znacznie prostsze i bardziej odporne na skomplikowane skalowanie.
-            const xPct = (e.offsetX / img.offsetWidth) * 100;
-            const yPct = (e.offsetY / img.offsetHeight) * 100;
+            // ### POCZĄTEK ZMIANY: POWRÓT DO PODSTAWOWEJ I NAJBARDZIEJ NIEZAWODNEJ METODY ###
+            const rect = img.getBoundingClientRect();
+            const xPct = ((e.clientX - rect.left) / rect.width) * 100;
+            const yPct = ((e.clientY - rect.top) / rect.height) * 100;
             // ### KONIEC ZMIANY ###
 
             const cur = questions[idx];
