--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
       </div>
       <p id="question-text" class="text-blue-600 text-lg font-semibold"></p>
     </div>
-    <div id="map-wrapper">
-      <img id="map-image" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Europe_countries_map_en_2.png/1024px-Europe_countries_map_en_2.png" alt="Mapa polityczna Europy">
+   <div id="map-wrapper">
+      <img id="map-image" src="licensed-image.jpg" alt="Mapa polityczna Europy">
       <div id="marker-container"></div>
+    </div>
+    
     </div>
     <div id="feedback" class="feedback"></div>
     <button id="reset-btn" class="hidden bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700">Zagraj jeszcze raz</button>
