--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
 
     <div id="map-wrapper">
       <!-- jeśli chcesz pracować offline, podmień src na lokalny plik -->
-      <img id="map-image"
-           src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Europe_countries_map_en_2.png/1024px-Europe_countries_map_en_2.png"
-           alt="Mapa polityczna Europy">
+     <img id="map-image" src="licensed-image.jpg" alt="Mapa polityczna Europy">
+
       <div id="marker-container"></div>
     </div>
 
